--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
   "bugs": {
     "url": "https://github.com/andrey-ageev/salt/issues"
   },
-  "homepage": "https://github.com/andrey-ageev/salt#readme"
+  "homepage": "https://github.com/andrey-ageev/salt#readme",
+  "devDependencies": {
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
+  }
 }
